Overflown teaser text bugfix.

--- a/public/client/styles/main.css
+++ b/public/client/styles/main.css
@@ -768,6 +768,40 @@ a:hover, a:focus {
   }
 }
 
+.title {
+  font-family: "Roboto", sans-serif;
+  font-weight: 600;
+  font-size: 18px;
+  text-transform: uppercase;
+}
+
+.title--lines {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.title--lines::before, .title--lines::after {
+  content: "";
+  background-color: #212121;
+  height: 2px;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+}
+
+.title--lines::before {
+  margin-right: 32px;
+}
+
+.title--lines::after {
+  margin-left: 32px;
+}
+
 .content {
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
@@ -788,15 +822,17 @@ a:hover, a:focus {
 }
 
 .content-main {
-  -webkit-box-flex: 10;
-      -ms-flex-positive: 10;
-          flex-grow: 10;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   padding: 0 16px;
   margin: 0 auto;
+  max-width: 100%;
+  min-width: 0;
 }
 
 @media (max-width: 839.98px) {
-  .content-main {
+  .content-main--article {
     max-width: 600px;
   }
 }
